# Cpp_Aleksandra_Bujak

Lista_1/: CMakeLists.txt  Zadanie_1.cpp  Zadanie_2.cpp  Zadanie_3.cpp
Lista_2/: CMakeLists.txt  Zadanie_1.cpp  Zadanie_2.cpp  Zadanie_3.cpp  Zadanie_5.cpp  Zadanie_6.cpp  Zadanie_8.cpp
Lista_3/: CMakeLists.txt  Zadanie_2.cpp  Zadanie_3.cpp  Zadanie_4.cpp  Zadanie_5.cpp
Lista_4/: CMakeLists.txt  Zadanie_1.cpp  Zadanie_2.cpp  Zadanie_3.cpp  Zadanie_5.cpp  Zadanie_6.cpp  complex.h  random.cpp  random.h  wektor.cpp  wektor.h  zespolona.cpp  zespolona.h
Lista_5/: CMakeLists.txt  Zadanie1.cpp  Zadanie_1.cpp  Zadanie_3.cpp  stos.cpp  stos.h  stos2.cpp  stos2.h  stos3.cpp  stos3.h  stos4.cpp  stos4.h
Lista_6/: CMakeLists.txt  Zadanie_1.cpp  cztery.cpp  cztery.h  dwa.cpp  dwa.h  raz.cpp  raz.h  trzy.cpp  trzy.h
