cmake_minimum_required(VERSION 3.5)

project(Lista_3 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Lista_3 main.cpp)
add_executable(zad2 Zadanie_2.cpp)
add_executable(zad3 Zadanie_3.cpp)
add_executable(zad4 Zadanie_4.cpp)
add_executable(zad5 Zadanie_5.cpp)
